# castellan

./: .gitignore  AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
castellan/: __init__.py  cli.py  compliance.py  connect.py  core.py  importers.py  library.py  mcp_server.py  report.py  scoring.py
castellan/data/: __init__.py  frameworks.py  knowledge.py
castellan/iac/: __init__.py  cloudformation.py  common.py  compose.py  kubernetes.py  terraform.py
demos/01-basic/: SCENARIO.md  webapp.yml
demos/02-privacy/: SCENARIO.md  health-portal.yml
demos/03-iac/: SCENARIO.md  main.tf
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md  INTEGRATIONS.md
examples/: help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_cli.py  test_connect.py  test_engine.py  test_hardening.py  test_iac.py  test_library.py  test_report.py  test_smoke.py
threatmodeler/: __init__.py  cli.py  core.py  mcp_server.py
