[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-castellan"
version = "1.0.0"
description = "Offline, MCP-native threat modeling: STRIDE + LINDDUN models, DREAD risk, attack trees, and 600+ compliance-framework mappings from a spec or your IaC."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "threat-modeling", "stride",
            "linddun", "dread", "attack-trees", "appsec", "compliance", "mcp",
            "sarif", "iac", "terraform", "kubernetes", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/castellan"

[project.scripts]
"castellan-emit" = "castellan.connect:emit_main"
castellan = "castellan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["castellan"]

[tool.hatch.metadata]
allow-direct-references = true
